# anticipate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  anticipate  anticipate.cpp  development_journal.md
frontend/: package-lock.json  package.json
frontend/public/: firebase-messaging-sw.js  index.html
frontend/src/: App.js  index.js
frontend/src/api/: axios.jsx
frontend/src/api/services/: NotificationService.jsx  SensorService.jsx  UserRegistrationService.jsx
frontend/src/components/: Bargraph.jsx  BargraphStyle.css  ErrorPage.jsx  ErrorPageStyle.css  Navbar.jsx  navbarStyle.css
frontend/src/config/: Firebase.jsx  GenerateToken.jsx
frontend/src/firebase/: AuthProvider.jsx  Firebase.jsx  GenerateToken.jsx
frontend/src/views/: Dashboard.jsx  DashboardStyle.css  Login.jsx  Root.jsx  SignUp.css  SignUp.jsx  loginStyle.css  rootStyle.css
misc/: pico_pi
pico/: CMakeLists.txt  anticipate  anticipate.cpp  build.sh  portalForm.html  portalServer.h  wifiProvision.h
pico/pico_executables/: blink.c
pico/pico_executables/http_server_testing/: httpTcpServer.h  http_server  server
pico/public/: login.html
pico/src/: button_hal.c  button_hal.h  main.c  notify_client.c  notify_client.h  pico_dns_resolver.c  pico_dns_resolver.h  sensor_hal.c  sensor_hal.h  wl_log.c  wl_log.h
pico/wifi_provisioner/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
pico/wifi_provisioner/src/: example_main.c  lwipopts.h  pico_captive_portal.c  pico_dhcp.c  pico_dhcp.h  pico_fs.c  pico_fs.h  wifi_provisioner.c  wifi_provisioner.h
pico_executables/: CMakeLists.txt  build.sh
pico_executables/http_server_testing/: http_server.cpp
server/: pom.xml
server/src/main/java/com/example/smsserver/: SmsServerApplication.java
server/src/main/java/com/example/smsserver/aspect/: RateLimit.java  RateLimitAspect.java
server/src/main/java/com/example/smsserver/config/: FirebaseConfig.java  FirebaseProperties.java  SecurityConfig.java  WebConfig.java
server/src/main/java/com/example/smsserver/controller/: NotificationController.java  SensorController.java  TokenRegistrationController.java  UserRegistrationController.java
server/src/main/java/com/example/smsserver/dto/: RegistrationRequest.java  SensorNotification.java  SensorNotificationDTO.java  SensorRegistrationRequest.java  SensorRegistrationRequestDTO.java  SensorResponseDTO.java  TokenRegistrationRequest.java  TokenRegistrationRequestDTO.java  UserAuthenticationRequestDTO.java  UserRegistrationRequest.java  UserRegistrationRequestDTO.java
server/src/main/java/com/example/smsserver/dto/Sensor/: SensorHistoryDTO.java  SensorHistoryHourAggregateDTO.java  SensorNotificationDTO.java  SensorRegistrationRequestDTO.java  SensorResponseDTO.java
server/src/main/java/com/example/smsserver/dto/Token/: TokenRegistrationRequestDTO.java
server/src/main/java/com/example/smsserver/dto/User/: UserAuthenticationRequestDTO.java  UserRegistrationRequestDTO.java
server/src/main/java/com/example/smsserver/dto/captcha/: RecaptchaRequest.java  RecaptchaResponse.java
server/src/main/java/com/example/smsserver/dto/sensor/: SensorHistoryDTO.java  SensorHistoryHourAggregateDTO.java  SensorNotificationDTO.java  SensorRegistrationRequestDTO.java  SensorResponseDTO.java
server/src/main/java/com/example/smsserver/dto/token/: TokenRegistrationRequestDTO.java
server/src/main/java/com/example/smsserver/dto/user/: UserAuthenticationRequestDTO.java  UserRegistrationRequestDTO.java
server/src/main/java/com/example/smsserver/exception/: ErrorResponse.java  GlobalExceptionHandler.java  GoogleRecaptchaFailedException.java  IncorrectCredentialsException.java  RateLimitExceededException.java  SensorAlreadyAssociatedWithUserException.java  SensorDoesNotExistException.java  UnauthorisedAccessException.java  UserAlreadyExistsException.java  UserNotFoundException.java  UserRegistrationException.java
server/src/main/java/com/example/smsserver/filter/: TokenAuthenticationFilter.java
server/src/main/java/com/example/smsserver/model/: RegistrationToken.java  Sensor.java  SensorNotification.java  TokenRegistration.java  User.java  UserSensor.java
server/src/main/java/com/example/smsserver/repository/: RegistrationTokenRepository.java  SensorNotificationRepository.java  SensorRepository.java  TokenRegistrationRepository.java  UserRepository.java  UserSensorRepository.java
server/src/main/java/com/example/smsserver/service/: CaptchaService.java  CaptchaServiceImpl.java  NotificationService.java  NotificationServiceImpl.java  SensorService.java  SensorServiceImpl.java  TokenRegistrationService.java  TokenRegistrationServiceImpl.java  UserService.java  UserServiceImpl.java
server/src/main/java/com/example/smsserver/utils/: HttpReqRespUtils.java
server/src/test/java/com/example/smsserver/: SmsServerApplicationTests.java
server/src/test/java/com/example/smsserver/controller/: RegistrationControllerTest.java  TokenRegistrationControllerTest.java
server/src/test/java/com/example/smsserver/service/: NotificationServiceImplTest.java  SensorServiceImplTest.java  TokenRegistrationServiceImplTest.java  UserServiceImplTest.java
src/: pico_captive_portal.h  pico_dhcp.c  pico_fs.c  wifi_provisioner.c  wifi_provisioner.h
src/main/java/com/example/smsserver/config/: FirebaseConfig.java
src/main/java/com/example/smsserver/controller/: RegistrationController.java
